# basic_python

./: .coverage  .flake8  .pyre_configuration  README.MD  conda-lock.yml  dagger.cue  environment.yml  noxfile.py  pyproject.toml
.github/workflows/: dagger_on_push.yml
cue.mod/pkg/universe.dagger.io/alpha/terraform/: workspace.cue
cue.mod/pkg/universe.dagger.io/python/test/data/: helloworld.py
cue.mod/pkg/universe.dagger.io/x/baptiste.barbotin@epitech.eu/azure/azure/login/: login.cue
cue.mod/pkg/universe.dagger.io/x/baptiste.barbotin@epitech.eu/azure/test/azureServerless/deploy_function/HttpExample/: index.js
docs/: conf.py  index.rst
docs/_build/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree
src/test_environment/: __init__.py  main.py
tests/: __init__.py  test_initial.py
