[tool.poetry]
name = "base_environment"
version = "0.1.0"
description = ""
authors = ["Chris Gubbin <c.r.gubbin@soton.ac.uk>"]

[tool.poetry.dependencies]
python = "~3.9"
numpy = "1.23.1"
conda-lock = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
