[tool.poetry]
name = "base_environment"
version = "0.1.0"
description = ""
authors = ["Chris Gubbin <c.r.gubbin@soton.ac.uk>"]

[tool.poetry.dependencies]
python = "~3.9"
numpy = "1.23.1"
conda-lock = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = {extras = ["toml"], version = "^6.4.3"}
pytest-cov = "^3.0.0"
black = "^22.6.0"
flake8 = "^5.0.4"
flake8-alphabetize = "^0.0.17"
flake8-black = "^0.3.3"
flake8-bugbear = "^22.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
