[tool.poetry]
name = "test_environment"
version = "0.1.0"
description = ""
authors = ["Chris Gubbin <c.r.gubbin@soton.ac.uk>"]

[tool.poetry.dependencies]
python = "~3.9"
numpy = "1.23.1"
conda-lock = {extras = ["pip_support"], version = "^1.1.1"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = {extras = ["toml"], version = "^6.4.3"}
pytest-cov = "^3.0.0"
black = "^22.6.0"
flake8 = "^5.0.4"
flake8-alphabetize = "^0.0.17"
flake8-black = "^0.3.3"
flake8-bugbear = "^22.7.1"
pyre-check = "^0.9.15"
typeguard = "^2.13.3"
flake8-annotations = "^2.9.1"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.1"
xdoctest = "^1.0.1"
sphinx = "^5.1.1"
sphinx-autodoc-typehints = "^1.19.2"
pygments = "^2.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = "cue.mod/*"
